--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: node_js
 node_js:
   - "node"
 after_success:
-  - node_modules/codeclimate-test-reporter/bin/codeclimate.js < coverage/lcov.info
+  - node_modules/.bin/codeclimate-test-reporter < coverage/lcov.info
